[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/enemies/mob/m_4.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-behavior-tree-plugin/selector.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-behavior-tree-plugin/behavior_tree.gd" type="Script" id=3]
[ext_resource path="res://addons/godot-behavior-tree-plugin/sequence.gd" type="Script" id=4]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/in_range.gd" type="Script" id=5]
[ext_resource path="res://sprites/enemies/mobs_death.tres" type="Animation" id=6]
[ext_resource path="res://sprites/enemies/mob_perf_dmg.tres" type="Animation" id=7]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/attack.gd" type="Script" id=8]
[ext_resource path="res://scripts/enemies/mob/behavior/wait.gd" type="Script" id=9]
[ext_resource path="res://sprites/enemies/mob/Torreta-electro-abajo.png" type="Texture" id=10]
[ext_resource path="res://sprites/enemies/mob/Torreta-electro-aarrib.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.8756, 50.9265 )

[sub_resource type="CircleShape2D" id=2]
radius = 534.589

[node name="mob" type="Node2D"]

[node name="body" type="RigidBody2D" parent="."]
collision_layer = 4
collision_mask = 5
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="hurtbox" type="CollisionShape2D" parent="body"]
position = Vector2( -2.67267, 14.2544 )
shape = SubResource( 1 )

[node name="aggro_zone" type="Area2D" parent="body"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="body/aggro_zone"]
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="body"]
wait_time = 1.5

[node name="BehaviorTree" type="Node" parent="body"]
script = ExtResource( 3 )

[node name="BehaviorSelector" type="Node" parent="body/BehaviorTree"]
script = ExtResource( 2 )

[node name="BehaviorSequence3" type="Node" parent="body/BehaviorTree/BehaviorSelector"]
script = ExtResource( 4 )

[node name="in_range" type="Node" parent="body/BehaviorTree/BehaviorSelector/BehaviorSequence3"]
script = ExtResource( 5 )

[node name="attack" type="Node" parent="body/BehaviorTree/BehaviorSelector/BehaviorSequence3"]
script = ExtResource( 8 )

[node name="wander" type="Node" parent="body/BehaviorTree/BehaviorSelector"]
script = ExtResource( 9 )

[node name="base" type="Sprite" parent="body"]
scale = Vector2( 0.247755, 0.301899 )
texture = ExtResource( 10 )

[node name="muzzle" type="Sprite" parent="body/base"]
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="permanent" type="AnimationPlayer" parent="body/base"]
anims/mob_perf_dmg = ExtResource( 7 )
anims/mobs_death = ExtResource( 6 )

[connection signal="body_entered" from="body/aggro_zone" to="body" method="_on_aggro_zone_body_entered"]
[connection signal="body_exited" from="body/aggro_zone" to="body" method="_on_aggro_zone_body_exited"]
[connection signal="timeout" from="body/AttackTimer" to="body" method="_on_AttackTimer_timeout"]
